--- a/SwiftJSONComparison/Podfile
+++ b/SwiftJSONComparison/Podfile
@@ -1,7 +1,9 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '6.0'
+use_frameworks!
+platform :ios, '8.0'
 
 target 'SwiftJSONComparison' do
+
+pod 'Argo', '1.0.3'
 
 end
 
