--- a/SwiftJSONComparison/Podfile
+++ b/SwiftJSONComparison/Podfile
@@ -5,6 +5,7 @@ target 'SwiftJSONComparison' do
 
 pod 'Alamofire', '1.2.3'
 pod 'Argo', '1.0.3'
+pod 'JSONJoy-Swift', '0.9.2'
 pod 'ObjectMapper', '0.12'
 pod 'SwiftyJSON', '2.2.0'
 
